# ComfyUI-DazzleSwitch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  run_tests.py  setup.py  version.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  publish-to-registry.yml
docs/: architecture.md  dazzlenodes-integration.md  type-detection.md
examples/: DazzleSwitch-Test.json
py/: __init__.py  node.py
scripts/: install-hooks.sh
tests/one-offs/: test_switch_routing.py
web/: main.js
