[project]
name = "comfyui-dazzle-switch"
description = "Smart switch node for ComfyUI with dropdown-based input selection and INT override for cascading workflows. Route any data type through a named dropdown instead of moving noodles."
version = "0.3.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# No pip dependencies - all dependencies provided by ComfyUI
dependencies = []

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/DazzleNodes/ComfyUI-DazzleSwitch"
Issues = "https://github.com/DazzleNodes/ComfyUI-DazzleSwitch/issues"
Changelog = "https://github.com/DazzleNodes/ComfyUI-DazzleSwitch/releases"
Documentation = "https://github.com/DazzleNodes/ComfyUI-DazzleSwitch#readme"

# ComfyUI Registry Configuration
# See: https://docs.comfy.org/registry/publishing
[tool.comfy]
PublisherId = "djdarcy"
DisplayName = "Dazzle Switch (DazzleNodes)"
Icon = ""

# Publishing: Update version in this file and push to main branch
# GitHub Actions will automatically publish to ComfyUI Registry
